--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue": "^2.6.12",
     "vue-axios": "^3.2.0",
     "vue-router": "^3.0.1",
-    "vuelidate": "^0.7.6"
+    "vuelidate": "^0.7.6",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
